--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "portfolio-react-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://anhvpham.github.io/portfolio-create-react-app",
