--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "portfolio-react-app",
+  "name": "portfolio-create-react-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "MIT",
   "homepage": "http://anhvpham.github.io/portfolio-create-react-app",
   "dependencies": {
-    "@carbon/icons-react": "^10.16.0",
-    "@carbon/themes": "^10.17.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "carbon-components": "^10.18.0",
-    "carbon-components-react": "^7.18.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "styled-components": "^5.1.1"
+    "@carbon/icons-react": "^10.6.1",
+    "@carbon/themes": "^10.7.0",
+    "carbon-components": "^10.7.3",
+    "carbon-components-react": "^7.7.3",
+    "node-sass": "^4.13.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +40,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^2.1.1"
   }
 }
